feat: 完善各模块demo 示例

--- a/src/views/7-list-keys/index.scss
+++ b/src/views/7-list-keys/index.scss
@@ -1,11 +1,13 @@
 img{
-  max-width: 200px;
+  max-width: 100px;
 }
 
 .img__list{
-  padding: 0 20px;
+  padding: 10px 20px;
   text-align: left;
   li {
+    display: inline-block;
+    margin-left: 10px;
     margin-bottom: 15px;
   }
 }
